--- a/src/PluginSpaceport/Properties/Resources.resx
+++ b/src/PluginSpaceport/Properties/Resources.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="PluginAuthor" xml:space="preserve">
+    <value>Jason (Null) Spafford</value>
+  </data>
+  <data name="PluginDescription" xml:space="preserve">
+    <value>A spaceport IDE plugin for Flash develop.</value>
+  </data>
+  <data name="PluginGuid" xml:space="preserve">
+    <value>7b05efcc-d6e8-49c4-85b9-85ae9e22ead9</value>
+  </data>
+  <data name="PluginHelp" xml:space="preserve">
+    <value>http://spaceport.io</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>Spaceport Plugin</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="spaceportIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\spaceportIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
