--- a/src/PluginSpaceport/Properties/Resources.resx
+++ b/src/PluginSpaceport/Properties/Resources.resx
@@ -140,7 +140,7 @@
     <value>..\Resources\spaceportIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SpaceportPushName" xml:space="preserve">
-    <value>spaceport-push.exe</value>
+    <value>sp.exe</value>
   </data>
   <data name="SupportName" xml:space="preserve">
     <value>support</value>
