--- a/src/PluginSpaceport/Properties/Resources.resx
+++ b/src/PluginSpaceport/Properties/Resources.resx
@@ -134,7 +134,7 @@
     <value>http://spaceport.io</value>
   </data>
   <data name="PluginName" xml:space="preserve">
-    <value>Spaceport Plugin</value>
+    <value>Launchpad</value>
   </data>
   <data name="spaceportIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\spaceportIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
