Changed version to 0.9.1
- Changed all the spaceport stuff to Launchpad stuff in assembly info

--- a/src/Launchpad/Properties/Resources.resx
+++ b/src/Launchpad/Properties/Resources.resx
@@ -131,7 +131,7 @@
     <value>7b05efcc-d6e8-49c4-85b9-85ae9e22ead9</value>
   </data>
   <data name="PluginHelp" xml:space="preserve">
-    <value>http://spaceport.io</value>
+    <value>http://entitygames.net</value>
   </data>
   <data name="PluginName" xml:space="preserve">
     <value>Launchpad</value>
