--- a/src/Launchpad/Properties/Resources.resx
+++ b/src/Launchpad/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="simIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\computer.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="launchpadIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\launchpadIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
